@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-11-13T01:00:09Z",
-  "count_outdated" : 120,
-  "uniques_outdated" : 102,
-  "count" : 122,
-  "uniques" : 104,
+  "timestamp" : "2025-11-15T00:58:35Z",
+  "count_outdated" : 121,
+  "uniques_outdated" : 103,
+  "count" : 123,
+  "uniques" : 105,
   "clones" : [
     {
-      "timestamp": "2025-10-31T00:00:00Z",
+      "timestamp": "2025-11-05T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
@@ -15,7 +15,7 @@
       "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2025-11-05T00:00:00Z",
+      "timestamp": "2025-11-14T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
